<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="userName"
            type="String" />
        <variable
            name="animalName"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/mars_heroly_of_the_month"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:layout_marginBottom="@dimen/large_margin"
            android:background="@drawable/background_hero_alert"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/accept_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="132dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/buttons_accept"
            android:padding="10dp"
            android:text="@string/accept"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/mars_heroly_of_the_month"
            app:layout_constraintEnd_toEndOf="@+id/mars_heroly_of_the_month"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/call_button"
            app:layout_constraintTop_toTopOf="@+id/dismiss_button" />

        <Button
            android:id="@+id/dismiss_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/buttons_dismiss"
            android:padding="10dp"
            android:text="@string/dismiss"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/mars_heroly_of_the_month"
            app:layout_constraintEnd_toStartOf="@+id/accept_button" />

        <ImageButton
            android:id="@+id/call_button"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/buttons_dismiss"
            android:contentDescription="@string/call_icon"
            android:padding="10dp"
            android:src="@android:drawable/ic_menu_call"
            app:layout_constraintBottom_toBottomOf="@+id/mars_heroly_of_the_month"
            app:layout_constraintStart_toStartOf="@+id/mars_heroly_of_the_month"
            app:layout_constraintTop_toTopOf="@+id/dismiss_button"
            tools:src="@android:drawable/ic_menu_call" />

        <Button
            android:id="@+id/you_are_a_hero_button"
            style="@style/redButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/corner_radius_shape_small"
            android:padding="10dp"
            android:text="@string/you_are_a_hero"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/mars_heroly_of_the_month"
            app:layout_constraintTop_toTopOf="@+id/mars_heroly_of_the_month" />

        <com.example.marsheroly.common.widgets.CustomProfilePicture
            android:id="@+id/home_profile_picture"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:contentDescription="@string/placeholder_profile_picture"
            android:scaleType="centerCrop"
            app:borderTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/mars_heroly_of_the_month"
            app:layout_constraintEnd_toEndOf="@+id/mars_heroly_of_the_month"
            app:layout_constraintStart_toStartOf="@+id/mars_heroly_of_the_month"
            app:layout_constraintTop_toBottomOf="@+id/you_are_a_hero_button"
            app:layout_constraintVertical_bias="0.06999999"
            app:pictureSrc="@drawable/ic_no_picture_placeholder" />

        <TextView
            android:id="@+id/hero_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:lines="1"
            app:layout_constraintEnd_toEndOf="@+id/mars_heroly_of_the_month"
            app:layout_constraintStart_toStartOf="@+id/mars_heroly_of_the_month"
            app:layout_constraintTop_toBottomOf="@+id/home_profile_picture"
            android:ellipsize="end"
            tools:text="Mike" />

        <TextView
            android:id="@+id/need_hero_text_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/dismiss_button"
            app:layout_constraintEnd_toEndOf="@+id/mars_heroly_of_the_month"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/mars_heroly_of_the_month"
            app:layout_constraintTop_toBottomOf="@+id/hero_name_text_view"
            app:layout_constraintVertical_bias="0.00999999"
            tools:text="Needs a hero for Roc for tomorrow between 10am and 12am" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>